[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "secrets_saver"
version = "0.1.0"
authors = [
  { name="ArtOf", email="author@example.com" }
]
description = "A simple package to securely store and manage secrets."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "cryptography"
]

[project.optional-dependencies]
db = [
    "sqlalchemy"
]

[tool.setuptools]
py-modules = ["secrets_saver"]
