[package]
name = "secrets_saver_rust"
version = "0.1.0"
edition = "2021"
description = "Rust port of secrets_saver with AES-GCM + PBKDF2"
license = "MIT"

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
pbkdf2 = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
